data/derived/comb/progs/unify/prog3770.ml.out
Characters 96-126:
  else (intlist (x / 10))::[x mod 10] in
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
